<resources>
    <string name="xxx">xxxx</string>
    <string name="settings_name_space">settings_name_space</string>
    <string name="author_name">Spirit System mobile settings\nPetr Čada - error414@error414.com\nTomáš Jędrzejek - tomasj@spirit-system.com\nTomáš Neuberg\nDaniel Matloch - danielm@spirit-system.com\n \n build: 10.04.2016-devel</string>
    <string name="author">Author</string>
    <string name="credits">Credits</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save changes to unit</string>
    <string name="save_to_unit_done">Save to unit Done</string>
    <string name="open_manual">Open manual</string>
    <string name="open_manual_google_docs">Open manual in Google Docs</string>
    <string name="manual">Manual</string>
    <string name="profile">Profile</string>
    <string name="loaded_profile">Loaded profile</string>
    <string name="load_profile">Load profile</string>
    <string name="save_profile">Save profile</string>
    <string name="save_profile_to_unit">Save profile to unit</string>
    <string name="profile_saved_file">Settings have been saved to a file</string>
    <string name="save_to_file_fail">Saving to file failed</string>
    <string name="profile_saved">Settings have been saved</string>
    <string name="profile_load">Settings have been loaded</string>
    <string name="file_manager">File manager</string>
    <string name="file_not_found">File not found</string>
    <string name="choose_device">Choose device</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="write_please_wait">Writing data. Please wait\.\.\.</string>
    <string name="write_data">Writing data\.\.\.</string>
    <string name="read_please_wait">Reading data. Please wait\.\.\.</string>
    <string name="read_data">Reading data.\.\.\.</string>
    <string name="damage_profile">Damaged profile</string>
    <string name="unknow_version">Unknown version</string>
    <string name="unknow_serial">Unknown serial</string>
    <string name="first_paired_device">Pair your BT device first, please</string>
    <string name="connection_error">Connection error</string>
    <string name="copy_bank_error">Bank copying failed</string>
    <string name="BT_connection_progress">Connection in progress</string>
    <string name="axis_X">X - Elevator</string>
    <string name="axis_Y">Y - Aileron</string>
    <string name="axis_Z">Z - Yaw</string>
    <string name="connection_button_text">Connection</string>
    <string name="general_button_text">General</string>
    <string name="servos_button_text">Servos</string>
    <string name="diagnostic_button_text">Diagnostic</string>
    <string name="input_channels">Input channels</string>
    <string name="graph_button_text">Spectrum Analyzer</string>
    <string name="bec_tester">BEC Tester</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="bec_tester_note">
        &lt;p&gt;
            &lt;b&gt;BEC Tester&lt;/b&gt; ﻿is usefull utility for checking whether
            your BEC is able to stand high current load. This utility will move fast with all the servos for 20 seconds.
        &lt;/p&gt;
        &lt;p&gt;
           In case, that BEC is not sufficient, you can observe servo weakness and even the unit can reset itself if Voltage will drop under 1.9V.
        &lt;/p&gt;
        &lt;p&gt;
            &lt;b&gt;We highly recommend to unplug the motor or to dismount the blades. It may cause unpredictable behavior!&lt;br/&gt;
            Make sure that any servo is not too hot during this test. If so you must turn the test off as soon as possible.&lt;/b&gt;
        &lt;/p&gt;
    </string>
    <string name="pitch_pump">Pitch Pump Booster</string>
    <string name="stabi_col_warning_header">Warning</string>
    <string name="stabi_col_warning">Value between -30% to 30% may be too low!</string>
    <string name="senzor_button_text">Sensor</string>
    <string name="senzor_senzivity_button_text">Sensitivity</string>
    <string name="advanced_button_text">Advanced</string>
    <string name="stabi_button_text">Stabi</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="version">FW version</string>
    <string name="serial">Serial number</string>
    <string name="unit">Unit</string>
    <string name="link">Link</string>
    <string name="position_text">Position</string>
    <string name="model_text">Model</string>
    <string name="mix_text">Mix</string>
    <string name="receiver_text">Receiver</string>
    <string name="cyclic_servo_reverse_text">Cyclic Servo Reverse</string>
    <string name="flight_style_text">Flight Style</string>
    <string name="must_first_connect_to_device">Connect to your BT module first, please</string>
    <string name="connection_successfull">Connection successful</string>
    <string name="type">Type</string>
    <string name="subtrim">Subtrim</string>
    <string name="limit">Limit</string>
    <string name="limits">Limits</string>
    <string name="cyclic">Cyclic</string>
    <string name="frequency">Frequency</string>
    <string name="pulse">Pulse</string>
    <string name="rudder">Rudder</string>
    <string name="servo_rudder">Rudder (CH4)</string>
    <string name="servo_ch1">Pitch (CH1)</string>
    <string name="servo_ch2">Elevator (CH2)</string>
    <string name="servo_ch0">Elevator 2 (CH0)</string>
    <string name="servo_ch3">Aileron (CH3)</string>
    <string name="servo_ch1_inverted">Aileron (CH1)</string>
    <string name="servo_ch3_inverted">Pitch (CH3)</string>
    <string name="ch1" translatable="false">CH1</string>
    <string name="ch2" translatable="false">CH2</string>
    <string name="ch3" translatable="false">CH3</string>
    <string name="ch4" translatable="false">CH4</string>
    <string name="servo_travel_correction">Servo Travel Correction</string>
    <string name="reg_p">P</string>
    <string name="reg_i">I</string>
    <string name="reg_d">D</string>
    <string name="pirouette_consistency">Pirouette consistency</string>
    <string name="filter">Sensor filter</string>
    <string name="gyro">Gyro</string>
    <string name="diag_rudder">Rudder</string>
    <string name="diag_aileron">Aileron</string>
    <string name="diag_elevator">Elevator</string>
    <string name="diag_pitch">Pitch</string>
    <string name="diag_special" translatable="false">Special</string>
    <string name="governor_rpm_senzor">RPM Meter</string>
    <string name="cyclic_ring_range">Cyclic ring</string>
    <string name="cyclic_ring_range_no_break">Cyclic ring</string>
    <string name="ail_ele">Aileron / Elevator range</string>
    <string name="limit_pitch">Collective Pitch</string>
    <string name="pitch_range">Pitch range</string>
    <string name="rudder_end_points">Rudder \n end-points</string>
    <string name="rudder_end_points_no_break">Rudder end-points</string>
    <string name="blank" translatable="false"></string>
    <string name="cyc_rate">Cyclic</string>
    <string name="rud_rate">Rudder</string>
    <string name="x_picth">X-Pitch</string>
    <string name="x_cyclic">Cyclic Gain</string>
    <string name="y_rool">Y-Roll</string>
    <string name="z_yaw">Z-Yaw</string>
    <string name="rudder_common_gain">Rudder Common Gain</string>
    <string name="senzivity">Sensitivity</string>
    <string name="reverse">Reverse</string>
    <string name="reversed">Reversed</string>
    <string name="ser_reverse">Servo Reverse</string>
    <string name="rotation_speed">Rotation speed</string>
    <string name="rates">Rates</string>
    <string name="stick_deadband">Stick deadband</string>
    <string name="geom_6deg">Geometry 6°</string>
    <string name="geom_6deg_tune">Tuning</string>
    <string name="geom_corr">Geometry correction</string>
    <string name="geom_corr_auto">Automatic</string>
    <string name="rudder_dynamic">Rudder dynamic</string>
    <string name="rudder_revomix">Rudder - Revomix</string>
    <string name="rudder_delay">Rudder delay</string>
    <string name="rotor_rotation">Rotor Rotation Direction</string>
    <string name="rotor_rotation_title">Counter-Clockwise</string>
    <string name="e_filter">Elevator filter</string>
    <string name="pitchup">Elevator pitchup compensation</string>
    <string name="cyclic_phase">Cyclic phase</string>
    <string name="cyclic_phase_deg">Rotation angle [°]</string>
    <string name="cyclic_ff">Cyclic feed forward</string>
    <string name="ff">Feed forward</string>
    <string name="stabi_function">Function</string>
    <string name="stabi_col">Rescue collective pitch</string>
    <string name="stabi_roll">Roll compensation</string>
    <string name="stabi_roll_short">Roll compensation</string>
    <string name="stabi_pitch">Pitch compensation</string>
    <string name="stabi_pitch_short">Pitch compensation</string>
    <string name="stabi_stick">Sticks priority</string>
    <string name="stabi_fbmode">Flybar mechanic</string>
    <string name="stabi_fbmode_en">Enable</string>
    <string name="stabi_ctrldir">Direction control rate</string>
    <string name="amplitude">Amplitude</string>
    <string name="magnitude">Magnitude</string>
    <string name="hz">[Hz]</string>
    <string name="profile_diff">Profile diff</string>
    <string name="profile_bank_diff">Comparison</string>
    <string name="profile_bank_copy">Copying from bank</string>
    <string name="log_button_text">Log Viewer</string>
    <string name="channels">Channels</string>
    <string name="throttle">Throttle</string>
    <string name="gyro_gain">Rudder Gain</string>
    <string name="banks">Banks</string>
    <string name="bank">Bank</string>
    <string name="bank_short_code">B</string>
    <string name="choose_bank">Select bank</string>
    <string name="channelColision">Collision in <b>%1$s</b> occured! Please select a different channel.</string>
    <string name="signal_processing">Signal Processing</string>
    <string name="extended">Extended</string>
    <string-array name="bank_values">
        <item>Bank 0</item>
        <item>Bank 1</item>
        <item>Bank 2</item>
    </string-array>
    <string-array name="option_menu_values">
        <item>Menu</item>
    </string-array>
    <string-array name="channels_values">
        <item>1. channel</item>
        <item>2. channel</item>
        <item>3. channel</item>
        <item>4. channel</item>
        <item>5. channel</item>
        <item>6. channel</item>
        <item>7. channel</item>
        <item>Unassigned</item>
    </string-array>
    <string-array name="channels_restrict_values">
        <item>1. channel</item>
        <item>2. channel</item>
        <item>3. channel</item>
        <item>4. channel</item>
        <item>5. channel</item>
        <item>6. channel</item>
        <item>7. channel</item>
    </string-array>
    <string-array name="position_values">
        <item>Horizontal (0°)</item>
        <item>Horizontal (180°)</item>
        <item>Horizontal (0° + inverted)</item>
        <item>Horizontal (180° + inverted)</item>
        <item>Vertical (0° - left side)</item>
        <item>Vertical (180° - left side)</item>
        <item>Vertical (0° + right side)</item>
        <item>Vertical (180° + right side)</item>
    </string-array>
    <string-array name="aero_position_values">
        <item>Horizontal (0 deg)</item>
        <item>Horizontal (180 deg)</item>
        <item>Horizontal (0 deg + inverted)</item>
        <item>Horizontal (180 deg + inverted)</item>
        <item>Vertical (0 deg - left side)</item>
        <item>Vertical (180 deg - left side)</item>
        <item>Vertical (0 deg - right side)</item>
        <item>Vertical (180 deg - right side)</item>
    </string-array>
</resources>