<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/background_color">
	 <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color">

	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="775dp"
	        android:background="@color/background_color" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/black_line" />

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:text="@string/limit"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

			<TableLayout
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:layout_below="@+id/imageView1"
	            android:layout_marginTop="40dp" >

	            <TableRow
	                android:gravity="center">

	                <Button
	                    android:id="@+id/button1"
	                    android:layout_width="100dp"
	                    android:layout_height="wrap_content"
	                    android:layout_margin="10dp"
	                    android:onClick="openCyclicRingRange"
	                    android:text="@string/cyclic_ring_range" />

	                <Button
	                    android:id="@+id/button2"
	                    android:layout_width="100dp"
	                    android:layout_height="wrap_content"
	                    android:layout_margin="10dp"
	                    android:onClick="openRudderEndPoints"
	                    android:text="@string/rudder_end_points" />
	                
	            </TableRow>
	        </TableLayout>

	    </RelativeLayout>

	</ScrollView>
</LinearLayout>