<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/background_color">
	 <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color">

	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/background_color" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/black_line" />

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:text="@string/connection_button_text"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/black_line_small" />

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/textView2"
	            android:layout_below="@+id/imageView1"
	            android:layout_marginTop="32dp"
	            android:text="@string/status"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

	        <TextView
	            android:id="@+id/status_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/textView1"
	            android:layout_alignBottom="@+id/textView1"
	            android:layout_toRightOf="@+id/textView2"
	            android:text="TextView"
	            android:textColor="@color/text_color"
	            android:textSize="18dp"
	            android:textStyle="bold" />

	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="."
	            android:textColor="@color/text_color" />

	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/textView1"
	            android:layout_below="@+id/status_text"
	            android:layout_marginTop="100dp"
	            android:text="@string/choose_device"
	            android:textColor="@color/text_color" />

	        <Spinner
	            android:id="@+id/bt_device_spinner"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/textView3"
	            android:layout_alignRight="@+id/imageView1"
	            android:layout_below="@+id/textView3" />

	        <Button
	            android:id="@+id/connection_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/bt_device_spinner"
	            android:layout_below="@+id/bt_device_spinner"
	            android:layout_marginTop="33dp"
	            android:onClick="manageConnectionToBTDevice"
	            android:text="@string/connect"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

	        <TextView
	            android:id="@+id/curent_device_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/textView1"
	            android:layout_below="@+id/status_text"
	            android:text="TextView"
	            android:textColor="@color/text_color" />

	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/curent_device_text"
	            android:layout_below="@+id/curent_device_text"
	            android:layout_marginTop="15dp"
	            android:text="@string/version"
	            android:textColor="@color/text_color" />

	        <TextView
	            android:id="@+id/version"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/textView5"
	            android:layout_alignBottom="@+id/textView5"
	            android:layout_marginLeft="32dp"
	            android:layout_toRightOf="@+id/textView5"
	            android:text=""
	            android:textColor="@color/text_color" />

	    </RelativeLayout>

	</ScrollView>

</LinearLayout>