<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

	 <ScrollView
            android:id="@+id/scrollView1"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color">

	    <RelativeLayout
	        android:layout_width="320dp"
	        android:layout_height="wrap_content"
	        android:background="@color/background_color" >
	        
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/black_line" />

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:text="@string/senzor_button_text"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/black_line_small" />

	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/black_line_small" />

	        <TableLayout
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:layout_below="@+id/imageView1"
	            android:layout_marginTop="40dp" >

	            <TableRow
	                android:gravity="center">

	                <Button
	                    android:id="@+id/button1"
	                    android:layout_width="140dp"
	                    android:layout_height="50dp"
	                    android:layout_margin="10dp"
	                    android:background="@drawable/big_button_small_selector"
	                    android:onClick="openSenzorSenzivityActivity"
	                    android:text="@string/senzivity"
	                    android:textColor="@color/text_color_white"
	                    android:textStyle="bold" />

	                <Button
	                    android:id="@+id/button2"
	                    android:layout_width="140dp"
	                    android:layout_height="50dp"
	                    android:layout_margin="10dp"
	                    android:background="@drawable/big_button_small_selector"
	                    android:onClick="openSenzorReverseActivity"
	                    android:text="@string/reverse"
	                    android:textColor="@color/text_color_white"
	                    android:textStyle="bold" />
	                
	            </TableRow>
	            
	            <TableRow
	                android:gravity="center">

	                <Button
	                    android:id="@+id/button3"
	                    android:layout_width="140dp"
	                    android:layout_height="50dp"
	                    android:layout_margin="10dp"
	                    android:background="@drawable/big_button_small_selector"
	                    android:onClick="openSenzorRotationSpeedActivity"
	                    android:text="@string/rotation_speed"
	                    android:textColor="@color/text_color_white"
	                    android:textStyle="bold" />
	                
	            </TableRow>
	        </TableLayout>
	        
	    </RelativeLayout>

	</ScrollView>
</LinearLayout>