<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

	 <ScrollView
            android:id="@+id/scrollView1"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color">

	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/background_color" >
	        
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/black_line" />

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:text="@string/reverse"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/black_line_small" />

	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/black_line_small" />

	        <CheckBox
	            android:id="@+id/servo_rev_ch1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/textView2"
	            android:layout_below="@+id/imageView1"
	            android:layout_marginLeft="44dp"
	            android:layout_marginTop="53dp"
	            android:text="@string/ch1"
	            android:textColor="@color/text_color"
				android:checked="false" />

	        <CheckBox
	            android:id="@+id/servo_rev_ch2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/servo_rev_ch1"
	            android:layout_below="@+id/servo_rev_ch1"
	            android:layout_marginTop="32dp"
	            android:text="@string/ch2"
	            android:textColor="@color/text_color"
				android:checked="false" />

	        <CheckBox
	            android:id="@+id/servo_rev_ch3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/servo_rev_ch2"
	            android:layout_below="@+id/servo_rev_ch2"
	            android:layout_marginTop="32dp"
	            android:text="@string/ch3"
	            android:textColor="@color/text_color"
				android:checked="false" />


			<CheckBox
				android:id="@+id/servo_rev_ch4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignLeft="@+id/servo_rev_ch3"
				android:layout_below="@+id/servo_rev_ch3"
				android:layout_marginTop="32dp"
				android:text="@string/ch4"
				android:textColor="@color/text_color"
				android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/servo_rev_ch1_default"
                android:layout_alignTop="@+id/servo_rev_ch1"
                android:layout_toRightOf="@+id/servo_rev_ch1"
                android:layout_marginLeft="10dp"
                android:layout_alignBaseline="@+id/servo_rev_ch1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/servo_rev_ch2_default"
                android:layout_alignTop="@+id/servo_rev_ch2"
                android:layout_toRightOf="@+id/servo_rev_ch2"
                android:layout_marginLeft="10dp"
                android:layout_alignBaseline="@+id/servo_rev_ch2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/servo_rev_ch3_default"
                android:layout_alignTop="@+id/servo_rev_ch3"
                android:layout_toRightOf="@+id/servo_rev_ch3"
                android:layout_marginLeft="10dp"
                android:layout_alignBaseline="@+id/servo_rev_ch3"
                />


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text=""
				android:id="@+id/servo_rev_ch4_default"
				android:layout_alignTop="@+id/servo_rev_ch4"
				android:layout_toRightOf="@+id/servo_rev_ch4"
				android:layout_marginLeft="10dp"
				android:layout_alignBaseline="@+id/servo_rev_ch4"
				/>

		</RelativeLayout>

	</ScrollView>
</LinearLayout>