<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/background_color"
    android:weightSum="1">
	 <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
         android:layout_weight="1.10">

	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/background_color" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/black_line" />

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:text="@string/stabi_col"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/text_color"
	            android:textStyle="bold" />

	        <com.customWidget.picker.ProgresEx
	            android:id="@+id/stabi_pitch"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignRight="@+id/imageView1"
	            android:layout_below="@+id/imageView1"
	            android:layout_marginTop="32dp" >

	        </com.customWidget.picker.ProgresEx>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stabi_col_warning_header"
                android:id="@+id/warning_header"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/stabi_pitch"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stabi_col_warning"
                android:id="@+id/warning"
                android:layout_alignLeft="@+id/warning_header"
                android:layout_below="@+id/warning_header"
                android:textColor="@color/text_color"
                android:visibility="visible"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="8dp" />

        </RelativeLayout>

	</ScrollView>

</LinearLayout>